# su-kb-site

./: .env.example  .gitignore  AGENTS.md  BUILD-REPORT.md  CLAUDE.md  README.md
.github/workflows/: deploy.yaml
_design/: codex-review-2026-05-28.md  copy-markdown.js  design-notes.md  docpage.css  docpage.html  docpage.html.jinja  landing.css  landing.html  landing.html.jinja  tokens.css
_design/screenshots/codex-review-2026-05-28/: interaction-results.json
_spike/: SPIKE-NOTES.md  quartz.config.ts
_spike/content/: index.md
_spike/content/data-ai/: index.md
_spike/content/data-ai/claude/: claude-faq.md
_spike/quartz/styles/: custom.scss
_test-wikilinks/: README.md
_test-wikilinks/with-relative/: 483525103.md  534642749.md  544505857.md
_test-wikilinks/with-wikilinks/: 483525103.md  534642749.md  544505857.md
docs/: STATUS.md  next-session-plan.md
docs/decisions/: 0001-quartz-v4-as-ssg.md  0002-pivot-from-quartz-to-thin-renderer.md  README.md
docs/log/: 2026-05-28.md
export-tool/: CONTEXT.md  pyproject.toml  sync_config.yaml
export-tool/scripts/: export_space.py
export-tool/src/su_kb_export/: adf.py  attachments.py  config.py  converter.py  dead_letter.py  frontmatter.py  macros.py  puller.py  state.py  wikilinks.py
export-tool/tests/: conftest.py  test_adf.py  test_attachments.py  test_converter.py  test_macros.py  test_state.py
site/: CONTEXT.md
site/content/data-ai/: ai-syracuse-university.md
site/content/data-ai/claude/: claude-code-setup.md  (+9 more)
skill/: CONTEXT.md
tools/: build-one.py  kb_config.py  render.py
(+19 files in other folders)
