[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "su-kb-export"
version = "0.1.0"
description = "Confluence → markdown export tool for su-kb-site"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "lxml>=5.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
